# feeds

./: .gitignore  CMakeLists.txt  MAINTENANCE.md  PROTOCOL.md  README.md  buildspec.json  patch_zoom_imports.py
.github/workflows/: build-project.yaml  push.yaml
common/: shared-frame.h
data/locale/: en-US.ini
engine/: engine-api.cpp  engine-main.cpp  engine-meeting.cpp  engine-oauth.cpp  engine-screenshare.cpp  engine-sdk.cpp  engine-video.cpp
helper/: FeedsAuthHelper.cpp
installer/: feeds-installer.nsi
proxy/: libcurl_obs.def  libcurl_proxy.cpp  libcurl_proxy.def  libcurl_zoom.def
src/: engine-client.cpp  plugin-main.cpp
zoom-sdk/h/: auth_service_interface.h  customized_resource_helper_interface.h  direct_share_helper_interface.h  meeting_service_interface.h  notification_service_interface.h  presence_helper_interface.h  ui_hook_interface.h  zoom_sdk_def.h  zoom_sdk_ext.h  zoom_sdk_sms_helper_interface.h  zoom_sdk_util_define.h
zoom-sdk/h/customized_ui/: customized_annotation.h  customized_immersive.h  customized_immersive_container.h  customized_local_recording.h  customized_share_render.h  customized_ui_mgr.h  customized_video_container.h  zoom_customized_ui.h
zoom-sdk/h/meeting_service_components/: meeting_aan_interface.h  meeting_annotation_interface.h  meeting_breakout_rooms_interface_v2.h  meeting_chat_interface.h  meeting_closedcaption_interface.h  meeting_configuration_interface.h  meeting_docs_interface.h  meeting_emoji_reaction_interface.h  meeting_h323_helper_interface.h  meeting_indicator_interface.h  meeting_interpretation_interface.h  meeting_live_stream_interface.h  meeting_participants_ctrl_interface.h  meeting_phone_helper_interface.h  meeting_polling_ctrl_interface.h  meeting_production_studio_ctrl_interface.h  meeting_qa_ctrl_interface.h  meeting_remote_ctrl_interface.h  meeting_remote_support_interface.h  meeting_sharing_interface.h  meeting_sign_interpretation_interface.h  meeting_talkback_ctrl_interface.h  meeting_ui_ctrl_interface.h  meeting_whiteboard_ctrl_interface.h
